fix(reporter): more improvements and messaging tweaks